[package]
name = "kana"
version = "0.1.0"
authors = ["Ricardo B. Machado <ricardobm@gmail.com>"]
license = "MIT"
description = "Hiragana and Katakana training app"
repository = "https://github.com/ricardobm/nihon/"
keywords = ["japanese", "kana", "hiragana", "katakana"]

build = "build.rs"

[dependencies]
azul = { git = "https://github.com/maps4print/azul" }
lazy_static = "1.3.0"
regex = "1.1.2"
rand = "0.6.5"
