[package]
name = "kana"
version = "0.1.0"
authors = ["Ricardo B. Machado <ricardobm@gmail.com>"]
license = "MIT"
description = "Hiragana and Katakana library"
repository = "https://github.com/ricardobm/nihon/"
keywords = ["japanese", "kana", "hiragana", "katakana"]

build = "build.rs"

[dependencies]
lazy_static = "1.3.0"
regex = "1.1.2"
rand = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
