[package]
name = "kana_app"
version = "0.1.0"
authors = ["Ricardo B. Machado <ricardobm@gmail.com>"]
license = "MIT"
description = "Hiragana and Katakana training app"
repository = "https://github.com/ricardobm/nihon/"
keywords = ["japanese", "kana", "hiragana", "katakana"]

[[bin]]
name = "kana"
path = "src/main.rs"

[dependencies]
kana = { path = "../kana" }
lazy_static = "1.3.0"
regex = "1.1.2"
web-view = "0.4.0"
